[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Player/AI/PlayerAI.gd" type="Script" id=1]
[ext_resource path="res://src/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Player/AI/Defend.gd" type="Script" id=3]
[ext_resource path="res://src/Player/AI/Move.gd" type="Script" id=4]
[ext_resource path="res://src/Player/AI/Bully.gd" type="Script" id=5]
[ext_resource path="res://src/Player/AI/Attack.gd" type="Script" id=6]
[ext_resource path="res://src/Player/AI/Idle.gd" type="Script" id=7]

[node name="PlayerAI" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="OutlineCreator" parent="BoostRecharge" index="0"]
points = PoolVector2Array( 22.6274, 22.6274, -22.6274, 22.6274, -22.6274, -22.6274, 22.6274, -22.6274, 22.6274, 22.6274 )

[node name="PolygonCreator" parent="BoostRecharge" index="1"]
polygon = PoolVector2Array( 22.6274, 22.6274, -22.6274, 22.6274, -22.6274, -22.6274, 22.6274, -22.6274 )

[node name="Fill" parent="Body" index="0"]
polygon = PoolVector2Array( 22.6274, 22.6274, -22.6274, 22.6274, -22.6274, -22.6274, 22.6274, -22.6274 )

[node name="Outline" parent="Body" index="1"]
points = PoolVector2Array( 22.6274, 22.6274, -22.6274, 22.6274, -22.6274, -22.6274, 22.6274, -22.6274, 22.6274, 22.6274 )

[node name="Pointer" parent="Origin" index="0"]
points = PoolVector2Array( 5.65685, 5.65685, -5.65685, 5.65685, -5.65685, -5.65685, 5.65685, -5.65685, 5.65685, 5.65685 )

[node name="Fill" parent="Origin" index="1"]
polygon = PoolVector2Array( 5.65685, 5.65685, -5.65685, 5.65685, -5.65685, -5.65685, 5.65685, -5.65685 )

[node name="StateTimer" type="Timer" parent="." index="13"]
process_mode = 0
one_shot = true

[node name="DisableTimer" type="Timer" parent="." index="14"]
process_mode = 0
one_shot = true

[node name="States" type="Node" parent="." index="15"]

[node name="Idle" type="Node" parent="States" index="0"]
script = ExtResource( 7 )

[node name="Move" type="Node" parent="States" index="1"]
script = ExtResource( 4 )

[node name="Attack" type="Node" parent="States" index="2"]
script = ExtResource( 6 )

[node name="Defend" type="Node" parent="States" index="3"]
script = ExtResource( 3 )

[node name="Bully" type="Node" parent="States" index="4"]
script = ExtResource( 5 )
